# SkyData

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: blank.yml
project/: CMakeLists.txt  main.cpp
project/client/: README.md
project/client/observer/: CMakeLists.txt
project/client/observer/inc/: cloud_storage_downloader.h  local_listener.h  message_listener.h  message_updater.h  observer.h
project/client/observer/src/: cloud_storage_downloader.cpp  local_listener.cpp  message_listener.cpp  message_updater.cpp  observer.cpp
project/messages/: messages.h
project/queue/: CMakeLists.txt  queue.drawio
project/queue/include/message/: Message.h
project/queue/include/queue/: On_Disk_Saver_Queue.h  Queue.h  Vector_Queue.h
project/queue/include/queue_api/: Queue_API.h
project/queue/include/server/: Server.h  Simple_Server.h
project/queue/include/socket/: Socket.h
project/queue/src/: main.cpp
project/queue/src/queue/: On_Disk_Saver_Queue.cpp  Queue.cpp  Vector_Queue.cpp
project/queue/src/queue_api/: Queue_API.cpp
project/queue/src/server/: Server.cpp  Simple_Server.cpp
project/queue/tests/: main.cpp  queue_mock.h  server_mock.h
project/queue/tests/include/: queue_api_mock.h
project/queue/tests/src/: queue_api_tests.cpp  queue_tests.cpp  server_tests.cpp
